--- a/app/src/main/res/layout/activity_place_list.xml
+++ b/app/src/main/res/layout/activity_place_list.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        android:elevation="5dp"
+        android:elevation="@dimen/toolbar_elevation"
         android:minHeight="?attr/actionBarSize"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -41,16 +41,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingTop="10dp"
+        android:paddingTop="@dimen/grid_spacing"
         android:text="@string/no_data_found"
-        android:textSize="14sp" />
+        android:textSize="@dimen/item_subtitle" />
 
     <ImageView
         android:id="@+id/defaultIV"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/default_image_size"
+        android:layout_height="@dimen/default_image_size"
         android:layout_gravity="center"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:contentDescription="@string/content"
         android:src="@drawable/powered_by_google_light" />
 
@@ -61,7 +61,7 @@
         android:cacheColorHint="#00000000"
         android:divider="@color/transparent"
         android:dividerHeight="0.05dp"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp" />
+        android:paddingBottom="@dimen/grid_spacing"
+        android:paddingTop="@dimen/grid_spacing" />
 
 </LinearLayout>
