--- a/app/src/main/res/layout/card_opening_hours.xml
+++ b/app/src/main/res/layout/card_opening_hours.xml
@@ -4,7 +4,7 @@
         android:layout_width="match_parent"
         android:id="@+id/card_opening_hours"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="@dimen/view_spacing"
         android:layout_marginLeft="@dimen/key_line_1"
         android:layout_marginRight="@dimen/key_line_1"
         android:layout_marginTop="@dimen/card_margin_top"
@@ -24,12 +24,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/view_spacing"
                 android:background="@color/blue_singleborder_a"
-                android:paddingBottom="5dp"
-                android:paddingStart="15dp"
+                android:paddingBottom="@dimen/view_spacing"
+                android:paddingStart="@dimen/activity_horizontal_margin"
                 android:paddingEnd="0dp"
-                android:paddingTop="5dp"
+                android:paddingTop="@dimen/view_spacing"
                 android:text="@string/opening_hours" />
 
             <TextView
@@ -39,8 +39,8 @@
                 android:layout_below="@+id/openingHours1"
                 android:gravity="center"
                 android:text="@string/text_here"
-                android:textColor="#071754"
-                android:textSize="16.7sp"
+                android:textColor="@color/navy"
+                android:textSize="@dimen/item_title"
                 android:typeface="monospace" />
 
             <TextView
@@ -50,8 +50,8 @@
                 android:layout_below="@+id/sunday"
                 android:gravity="center"
                 android:text="@string/text_here"
-                android:textColor="#071754"
-                android:textSize="16.7sp"
+                android:textColor="@color/navy"
+                android:textSize="@dimen/item_title"
                 android:typeface="monospace" />
 
             <TextView
@@ -61,8 +61,8 @@
                 android:layout_below="@+id/monday"
                 android:gravity="center"
                 android:text="@string/text_here"
-                android:textColor="#071754"
-                android:textSize="16.7sp"
+                android:textColor="@color/navy"
+                android:textSize="@dimen/item_title"
                 android:typeface="monospace" />
 
             <TextView
@@ -72,8 +72,8 @@
                 android:layout_below="@+id/tuesday"
                 android:gravity="center"
                 android:text="@string/text_here"
-                android:textColor="#071754"
-                android:textSize="16.7sp"
+                android:textColor="@color/navy"
+                android:textSize="@dimen/item_title"
                 android:typeface="monospace" />
 
             <TextView
@@ -83,8 +83,8 @@
                 android:layout_below="@+id/wednesday"
                 android:gravity="center"
                 android:text="@string/text_here"
-                android:textColor="#071754"
-                android:textSize="16.7sp"
+                android:textColor="@color/navy"
+                android:textSize="@dimen/item_title"
                 android:typeface="monospace" />
 
             <TextView
@@ -94,8 +94,8 @@
                 android:layout_below="@+id/thursday"
                 android:gravity="center"
                 android:text="@string/text_here"
-                android:textColor="#071754"
-                android:textSize="16.7sp"
+                android:textColor="@color/navy"
+                android:textSize="@dimen/item_title"
                 android:typeface="monospace" />
 
             <TextView
@@ -103,11 +103,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/friday"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/view_spacing"
                 android:gravity="center"
                 android:text="@string/text_here"
-                android:textColor="#071754"
-                android:textSize="16.7sp"
+                android:textColor="@color/navy"
+                android:textSize="@dimen/item_title"
                 android:typeface="monospace" />
 
 
