--- a/app/src/main/res/layout/card_reviews.xml
+++ b/app/src/main/res/layout/card_reviews.xml
@@ -3,16 +3,16 @@
     android:id="@+id/card_reviews"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
-    android:layout_marginLeft="@dimen/key_line_1"
-    android:layout_marginRight="@dimen/key_line_1"
+    android:layout_marginBottom="@dimen/view_spacing"
+    android:layout_marginStart="@dimen/key_line_1"
+    android:layout_marginEnd="@dimen/key_line_1"
     android:layout_marginTop="@dimen/card_margin_top"
     android:clickable="true"
     android:elevation="@dimen/cardview_default_elevation"
     android:focusable="true"
     android:foreground="?selectableItemBackground"
-    android:paddingLeft="15dp"
-    android:paddingRight="15dp">
+    android:paddingStart="@dimen/activity_horizontal_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin">
 
 
     <RelativeLayout
@@ -27,10 +27,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:background="@color/blue_singleborder_a"
-            android:paddingBottom="5dp"
+            android:paddingBottom="@dimen/view_spacing"
             android:paddingEnd="0dp"
-            android:paddingStart="15dp"
-            android:paddingTop="5dp"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/view_spacing"
             android:text="@string/reviews"
             android:textStyle="bold" />
 
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/reviews1"
-            android:layout_margin="5dp"
+            android:layout_margin="@dimen/view_spacing"
             android:contentDescription="@string/content"
             android:src="@drawable/ic_action_rating_important" />
 
@@ -51,8 +51,8 @@
             android:layout_toEndOf="@+id/imageRating"
             android:text="@string/number_here"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#071754"
-            android:textSize="17sp" />
+            android:textColor="@color/navy"
+            android:textSize="@dimen/item_title" />
 
 
         <RatingBar
@@ -61,11 +61,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/ratingNumberTV"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="@dimen/grid_spacing"
             android:layout_toEndOf="@+id/ratingNumberTV"
             android:isIndicator="true"
             android:numStars="5"
-            android:paddingBottom="2dp"
+            android:paddingBottom="@dimen/button_margin"
             android:rating="1"
             android:stepSize="0.01" />
 
@@ -82,14 +82,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/person1"
-            android:layout_marginBottom="5dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginBottom="@dimen/view_spacing"
+            android:layout_marginStart="@dimen/grid_spacing"
             android:layout_toEndOf="@+id/person1"
             android:clickable="true"
             android:maxLines="4"
             android:text="@string/click_here"
-            android:textColor="#071754"
-            android:textSize="14sp" />
+            android:textColor="@color/navy"
+            android:textSize="@dimen/item_subtitle" />
 
         <TextView
             android:id="@+id/loadMoreReviews"
@@ -98,13 +98,13 @@
             android:layout_below="@+id/description_text"
             android:layout_centerHorizontal="true"
             android:background="@drawable/load_more"
-            android:paddingBottom="10dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:paddingTop="7dp"
+            android:paddingBottom="@dimen/grid_spacing"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/loadmore_vertical_spacing"
             android:text="@string/more_reviews"
-            android:textColor="#ccc"
-            android:textSize="16sp"
+            android:textColor="@color/off_white"
+            android:textSize="@dimen/item_title"
             android:textStyle="bold"
             android:typeface="sans" />
 
