--- a/app/src/main/res/layout/card_top_view.xml
+++ b/app/src/main/res/layout/card_top_view.xml
@@ -7,20 +7,20 @@
     <!-- FrameLayout is required for CardView to work witn ListView -->
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
         android:id="@+id/card_item"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="@dimen/key_line_1"
-        android:layout_marginRight="@dimen/key_line_1"
+        android:layout_marginBottom="@dimen/view_spacing"
+        android:layout_marginStart="@dimen/key_line_1"
+        android:layout_marginEnd="@dimen/key_line_1"
         android:layout_marginTop="@dimen/card_margin_top"
         android:background="@color/red"
         android:clickable="true"
         android:elevation="@dimen/cardview_default_elevation"
         android:focusable="true"
         android:foreground="?selectableItemBackground"
-        android:paddingLeft="15dip"
-        android:paddingRight="15dip">
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingStart="@dimen/activity_horizontal_margin">
 
 
         <RelativeLayout
@@ -30,41 +30,41 @@
 
             <View
                 android:id="@+id/topview"
-                android:layout_width="30dp"
+                android:layout_width="@dimen/topview_space"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="@dimen/view_spacing"
                 android:clickable="true"
                 android:gravity="center" />
 
             <TextView
                 android:id="@+id/streetView_tv"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="@dimen/map_streetview_size"
+                android:layout_height="@dimen/map_streetview_size"
                 android:layout_alignTop="@+id/topview"
-                android:layout_toLeftOf="@+id/topview"
+                android:layout_toStartOf="@+id/topview"
                 android:background="@drawable/selector_streetview"
                 android:clickable="true"
                 android:gravity="center"
                 android:text=""
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"
+                android:textColor="@color/transparent"
+                android:textSize="@dimen/item_title"
                 android:textStyle="bold"
                 android:typeface="sans" />
 
             <TextView
                 android:id="@+id/mapView_tv"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="@dimen/map_streetview_size"
+                android:layout_height="@dimen/map_streetview_size"
                 android:layout_alignTop="@+id/topview"
-                android:layout_toRightOf="@+id/topview"
+                android:layout_toEndOf="@+id/topview"
                 android:background="@drawable/selector_mapview"
                 android:clickable="true"
                 android:gravity="center"
                 android:text=""
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"
+                android:textColor="@color/transparent"
+                android:textSize="@dimen/item_title"
                 android:textStyle="bold"
                 android:typeface="sans" />
 
@@ -73,10 +73,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/streetView_tv"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="@dimen/view_spacing"
                 android:background="@color/blue_singleborder_a"
                 android:orientation="horizontal"
-                android:padding="5dp">
+                android:padding="@dimen/view_spacing">
 
                 <ImageView
                     android:id="@+id/directionimageView1"
@@ -103,30 +103,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_below="@+id/linearLayout1"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/view_spacing"
                 android:background="@color/blue_singleborder_a"
-                android:paddingBottom="5dp"
-                android:paddingLeft="15dp"
-                android:paddingTop="5dp"
+                android:paddingBottom="@dimen/view_spacing"
+                android:paddingEnd="0dp"
+                android:paddingStart="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/view_spacing"
                 android:text=""
-                android:textSize="17sp"
+                android:textSize="@dimen/item_title"
                 android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/linearLayoutSingle2"
                 android:layout_width="match_parent"
-                android:gravity="center"
-                android:layout_centerHorizontal="true"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/firstDetails"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="2dp">
+                android:padding="@dimen/button_margin">
 
                 <TextView
                     android:id="@+id/textDistance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
+                    android:layout_marginStart="@dimen/view_spacing"
                     android:layout_weight="1"
                     android:background="@drawable/tvselectoraqua"
                     android:clickable="false"
@@ -134,8 +135,8 @@
                     android:gravity="center_vertical"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="#071754"
-                    android:textSize="12sp" />
+                    android:textColor="@color/navy"
+                    android:textSize="@dimen/item_subtitle_corner" />
 
                 <TextView
                     android:id="@+id/textDriving"
@@ -148,8 +149,8 @@
                     android:gravity="center_vertical"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="#071754"
-                    android:textSize="12sp" />
+                    android:textColor="@color/navy"
+                    android:textSize="@dimen/item_subtitle_corner" />
 
                 <TextView
                     android:id="@+id/textWalking"
@@ -162,8 +163,8 @@
                     android:gravity="center_vertical"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="#071754"
-                    android:textSize="12sp" />
+                    android:textColor="@color/navy"
+                    android:textSize="@dimen/item_subtitle_corner" />
             </LinearLayout>
 
         </RelativeLayout>
