--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,12 +14,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:text="@string/text_here"
-        android:layout_marginRight="75dp"
-        android:layout_marginEnd="75dp"
+        android:layout_marginEnd="@dimen/view_end_margin"
         android:textColor="@color/blue_single"
-        android:textSize="17sp" />
+        android:textSize="@dimen/item_title" />
 
     <!-- Place Address -->
 
@@ -28,13 +26,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginRight="75dp"
-        android:layout_marginEnd="75dp"
+        android:layout_marginEnd="@dimen/view_end_margin"
         android:layout_below="@id/name"
-        android:layout_marginTop="1dip"
+        android:layout_marginTop="@dimen/view_small_margin"
         android:text="@string/text_here"
-        android:textSize="14sp" />
+        android:textSize="@dimen/item_subtitle" />
 
     <!-- Place rating -->
 
@@ -45,14 +41,13 @@
         android:id="@+id/distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@id/name"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="@dimen/button_margin"
         android:gravity="end"
         android:text="@string/number_here"
-        android:textColor="#585858"
-        android:textSize="12sp"
+        android:textColor="@color/off_gray"
+        android:textSize="@dimen/item_subtitle_corner"
         android:textStyle="bold" />
 
 
@@ -63,7 +58,6 @@
         style="?android:attr/ratingBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@id/address"
         android:isIndicator="true"
@@ -76,8 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/distance"
-        android:paddingTop="4dp"
-        android:layout_alignParentRight="true"
+        android:paddingTop="@dimen/view_spacing"
         android:layout_alignParentEnd="true"
         android:contentDescription="@string/content"
         android:src="@drawable/direction_btn" />
