--- a/app/src/main/res/layout/listitem_autocomplete.xml
+++ b/app/src/main/res/layout/listitem_autocomplete.xml
@@ -2,6 +2,6 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:textColor="#080A5C"
-    android:textSize="16sp" />
+    android:padding="@dimen/grid_spacing"
+    android:textColor="@color/navy"
+    android:textSize="@dimen/item_title" />
