--- a/app/src/main/res/layout/single2row.xml
+++ b/app/src/main/res/layout/single2row.xml
@@ -2,16 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp" >
+    android:paddingLeft="@dimen/grid_spacing"
+    android:paddingRight="@dimen/grid_spacing" >
 
     <ImageView
         android:id="@+id/imageView1_single2Row"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="@dimen/view_spacing"
         android:contentDescription="@string/content"
         android:src="@drawable/ic_action_person" />
 
@@ -20,10 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/imageView1_single2Row"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/imageView1_single2Row"
+        android:layout_marginStart="@dimen/view_spacing"
+        android:layout_toEndOf="@+id/imageView1_single2Row"
         android:text="@string/text_here"
-        android:textColor="#545452" />
+        android:textColor="@color/off_gray" />
 
     <RatingBar
         android:id="@+id/ratingbar_Single2Row"
@@ -31,11 +31,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1_Single2Row"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/imageView1_single2Row"
+        android:layout_marginStart="@dimen/view_spacing"
+        android:layout_toEndOf="@+id/imageView1_single2Row"
         android:isIndicator="true"
         android:numStars="5"
-        android:paddingBottom="2dp"
+        android:paddingBottom="@dimen/button_margin"
         android:rating="1"
         android:stepSize="0.01" />
 
@@ -44,10 +44,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ratingbar_Single2Row"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/imageView1_single2Row"
-        android:paddingRight="2dp"
+        android:layout_marginStart="@dimen/view_spacing"
+        android:layout_toEndOf="@+id/imageView1_single2Row"
+        android:paddingEnd="@dimen/button_margin"
         android:text="@string/text_here"
-        android:textSize="16sp" />
+        android:textSize="@dimen/item_title" />
 
 </RelativeLayout>
