--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/colorPrimary"
-    android:elevation="5dp"
+    android:elevation="@dimen/toolbar_elevation"
     android:minHeight="?attr/actionBarSize"
     app:popupTheme="@style/AppTheme"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
