--- a/app/src/main/res/layout/vertical_dialog.xml
+++ b/app/src/main/res/layout/vertical_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="290dp"
+    android:layout_width="@dimen/dialog_horizontal_space"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:orientation="vertical" >
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
+        android:paddingLeft="@dimen/view_spacing"
+        android:paddingRight="@dimen/view_spacing"
         android:text="@string/enable_gps_message" />
 
     <Button
