--- a/app/src/main/res/layout/card_top_view.xml
+++ b/app/src/main/res/layout/card_top_view.xml
@@ -7,7 +7,7 @@
     <!-- FrameLayout is required for CardView to work witn ListView -->
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_item"
+        android:id="@+id/card_item_place_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/view_spacing"
