--- a/app/src/main/res/layout/activity_reviews.xml
+++ b/app/src/main/res/layout/activity_reviews.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
@@ -14,9 +13,10 @@
 
     <ListView
         android:id="@+id/listViewSingleNext"
-        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        style="@style/max_layout_width_style"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp" >
+        android:layout_marginBottom="@dimen/card_margin" >
     </ListView>
 
 </LinearLayout>
