--- a/app/src/main/res/layout/card_opening_hours.xml
+++ b/app/src/main/res/layout/card_opening_hours.xml
@@ -5,8 +5,8 @@
         android:id="@+id/card_opening_hours"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/view_spacing"
-        android:layout_marginLeft="@dimen/key_line_1"
-        android:layout_marginRight="@dimen/key_line_1"
+        android:layout_marginStart="@dimen/key_line_1"
+        android:layout_marginEnd="@dimen/key_line_1"
         android:layout_marginTop="@dimen/card_margin_top"
         android:clickable="true"
         android:elevation="@dimen/cardview_default_elevation"
