--- a/app/src/main/res/layout/single2row.xml
+++ b/app/src/main/res/layout/single2row.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/grid_spacing"
-    android:paddingRight="@dimen/grid_spacing" >
+    android:paddingStart="@dimen/grid_spacing"
+    android:paddingEnd="@dimen/grid_spacing" >
 
     <ImageView
         android:id="@+id/imageView1_single2Row"
