--- a/app/src/main/res/layout/single_item_view.xml
+++ b/app/src/main/res/layout/single_item_view.xml
@@ -3,14 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="7dp"
-    android:paddingLeft="15dp"
-    android:paddingTop="7dp" >
+    android:paddingStart="15dp"
+    android:paddingEnd="0dp"
+    android:paddingTop="7dp">
 
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:adjustViewBounds="true"
         android:contentDescription="@string/content"
@@ -21,8 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="20dp"
-        android:layout_toRightOf="@+id/imageView1"
+        android:layout_marginStart="20dp"
+        android:layout_toEndOf="@+id/imageView1"
         android:text="@string/text_here"
         android:textColor="#152c81"
         android:textSize="23sp"/>
