--- a/app/src/main/res/layout/vertical_dialog.xml
+++ b/app/src/main/res/layout/vertical_dialog.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:paddingLeft="@dimen/view_spacing"
-        android:paddingRight="@dimen/view_spacing"
+        android:paddingStart="@dimen/view_spacing"
+        android:paddingEnd="@dimen/view_spacing"
         android:text="@string/enable_gps_message" />
 
     <Button
